@@ -164,7 +164,7 @@ class Level(Enum):
     ERROR       = 4
     CRITICAL    = 5
 
-class Logger(EasyObj):
+class Logger            (EasyObj        ):
     '''Logger base.
         
         All derived must override on_init and execute_log.
@@ -314,8 +314,7 @@ class Logger(EasyObj):
                 str         : The log string or None.
         '''
         raise NotImplementedError()
-
-class ConsoleLogger(Logger):
+class ConsoleLogger     (Logger         ):
     '''Console logger.
         A simple console logger, prints the logs on console.
     '''
@@ -351,8 +350,7 @@ class ConsoleLogger(Logger):
             print(text)
 
         return text
-
-class FileLogger(ConsoleLogger):
+class FileLogger        (ConsoleLogger  ):
     '''Text file logger.
 
         Simple text file logger based on ``ConsoleLogger``, dumps the logs generated by ``ConsoleLogger`` to txt files.
@@ -415,8 +413,7 @@ class FileLogger(ConsoleLogger):
         with open(self.g_path(level),'a') as f :
             f.write(text+'\n')
         return text
-
-class CsvLogger(FileLogger):
+class CsvLogger         (FileLogger     ):
     '''Csv logger.
 
         Csv File logger.
@@ -442,8 +439,7 @@ class CsvLogger(FileLogger):
                     level.name          ,
                     key                 ,
                     str(log_dict[key])  ] for key in log_dict])
-
-class SQLAlchemyLogger(Logger):
+class SQLAlchemyLogger  (Logger         ):
     '''SQLAlchemy File logger
         
         Dumps the logs to a database, the columns are the same as in the csv 
@@ -535,9 +531,9 @@ class SQLAlchemyLogger(Logger):
 #################### Exceptions
 ############################################################
 
-EXCEPTION_LOGGER = None
+MAIN_LOGGER = None
 
-def set_exception_logger(logger):
+def set_main_logger(logger):
     '''Sets a global logger for all exceptions.
         
         Sets a global exception logger for all exceptions.
@@ -548,9 +544,9 @@ def set_exception_logger(logger):
         Args:
             logger  (Logger ): A Logger instance. 
     '''
-    global EXCEPTION_LOGGER
-    if not EXCEPTION_LOGGER:
-        EXCEPTION_LOGGER = logger
+    global MAIN_LOGGER
+    if not MAIN_LOGGER:
+        MAIN_LOGGER = logger
 
 class ExceptionCritical(Exception):
     '''Raised on critical exceptions.
@@ -572,9 +568,10 @@ def handle_exception(
     after           = None          ,
     on_success      = None          ,
     on_failure      = None          ,
-    log_params      = None          ,
+    log_params      = []            ,
     log_start       = False         ,
     log_end         = False         ,
+    params_start    = []            ,
     attempts        = 1             ):
     '''Wrapper for exception handling.
 
@@ -596,6 +593,7 @@ def handle_exception(
             log_start       (bool                       : False             ): Logs the function call before starting if set 
                 to True.
             log_end         (bool                       : False             ): Logs the execution termination if set to True.
+            params_start    (list, str                  : []                ): Logs params on start.
             attempts        (int                        : 1                 ): Number of repeated attempts in case of exceptions, 
                 0 for an infinite loop. 
     '''
@@ -608,9 +606,26 @@ def handle_exception(
                     return 
                 if  logger:
                     logger.log(l, d)
-                elif EXCEPTION_LOGGER :
-                    EXCEPTION_LOGGER.log(l, d)
+                elif MAIN_LOGGER :
+                    MAIN_LOGGER.log(l, d)
 
+            def g_params_dict(params_to_log):
+                all_params  = inspect.signature(fn).parameters
+                params_dict = {}
+
+                for param in all_params:
+                    if all_params[param].default != inspect._empty:
+                        params_dict[param] = all_params[param].default
+                for i in range(len(args))   :
+                    params_dict[list(all_params.keys())[i]]     = args[i]
+                for kwarg in kwargs         :
+                    params_dict[kwarg]                          = kwargs[kwarg]
+                
+                if log_params != [] :
+                    params_dict = {x: params_dict[x] for x in log_params}
+
+                return {'Parameter: {}'.format(param):  str(params_dict[param]) for param in params_dict}
+                
             #Set execution result to fall back value
             return_value = fall_back_value
 
@@ -623,14 +638,18 @@ def handle_exception(
             n_attempt   = 0
             while attempts == 0 or n_attempt < attempts :
                 if log_start:
-                    do_log(Level.INFO  , {'Started {}'.format(n_attempt+ 1): name})
+                    start_dict = {'Started {}'.format(n_attempt+ 1): name}
+                    if params_start :
+                        start_dict.update(g_params_dict(params_start))
+                    do_log(Level.INFO  , start_dict)
                 try :
                     #Call the function
                     return_value =  fn(*args,**kwargs)
                 except :
                     #Extract traceback
                     exc_type, exc_obj, exc_tb   = sys.exc_info()
-                    tb                          = traceback.extract_tb(exc_tb)[1]
+                    tbl                         = traceback.extract_tb(exc_tb)
+                    tb                          = tbl[1] if len(tbl) > 1 else tbl[0]
 
                     if exc_type != ExceptionCritical:
                         exc_crt     = ExceptionCritical(name)
@@ -649,25 +668,10 @@ def handle_exception(
                             'catcher'   : name              ,
                             }
 
-                    log_dict['attempt'] = n_attempt
+                    log_dict['attempt'] = n_attempt+ 1
 
-                    if log_params != None :
-                        all_params  = inspect.signature(fn).parameters
-                        params_dict = {}
-
-                        for param in all_params:
-                            if all_params[param].default != inspect._empty:
-                                params_dict[param] = all_params[param].default
-                        for i in range(len(args))   :
-                            params_dict[list(all_params.keys())[i]]     = args[i]
-                        for kwarg in kwargs         :
-                            params_dict[kwarg]                          = kwargs[kwarg]
-                        
-                        if log_params != [] :
-                            params_dict = {x: params_dict[x] for x in log_params}
-
-                        for param in params_dict :
-                            log_dict['Parameter: {}'.format(param)]= str(params_dict[param])
+                    if log_params != []:
+                        log_dict.update(g_params_dict(log_params))
 
                     do_log(level, log_dict)
 
